# geometria-computacional

./: Mesh.cpp  README.org
CGAL_curvatures/bash/: CMakeLists.txt  MeshSphere.cxx
CGAL_curvatures/lib/CGAL_EXT/: Cone_function.h  Cylinder_function.h
CompGeom/: README.org
CompGeom/bash/: MeshToSimplex.cxx
curvatura/: esfera.py
curvaturas/: README.org
curvaturas/lib/CGAL_EXT/: Ellipsoid_function.h
ejemplo/: CMakeLists.txt  greene.cxx  miPrimerCgal.cxx
ejemplo-build/: CMakeCache.txt
ejercicios/barrido-intersecciones/: CMakeLists.txt  intersecciones.cxx
ejercicios/curvatura/: esfera.py
ejercicios/ejemplo/: miPrimerCgal.cxx
ejercicios/test_simplex/: CMakeLists.txt  README.org
laberinto/: CMakeLists.txt  LabToMesh.cxx  README.org  filter.cxx  laberinto.cxx  labyrinth.cxx  labyrinth_solver.cxx  pos.cxx  room.cxx
simplex/: CMakeLists.txt
simplex/bash/: MeshToSimlexMarcoAurelioCampoVec  MeshToSimlexMarcoAurelioCampoVec.cxx  MeshToSimplex.cxx  simplex_dark_magic.cxx
simplex_mesh/: simplex.cxx
triangulacion/: CMakeLists.txt  README.org  triangulacion.cxx
voronoi/: CMakeLists.txt  README.org  voronoi.cxx
